# AudioSplitter

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: sync_changelog.py
src/splitter/: __init__.py  audio_io.py  changelog_sync.py  cli.py  models.py  separator.py  temp_cache.py
src/splitter/desktop/: api.py  app.py
src/splitter/desktop/ui/: app.js  index.html  styles.css
src/splitter/sources/: __init__.py  youtube.py
tests/: test_changelog_sync.py  test_cli.py  test_desktop.py  test_temp_cache.py  test_youtube.py
