[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "splitter"
version = "0.1.0"
description = "Local CLI for splitting audio into vocals, drums, bass, and other stems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "demucs>=4.0.1",
  "typer>=0.12",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
splitter = "splitter.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests that run model inference (deselect with '-m \"not slow\"')",
]
