[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "splitter"
version = "0.1.2"
description = "CLI and desktop app for splitting audio into vocals, drums, bass, and other stems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "demucs>=4.0.1",
  "typer>=0.12",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
desktop = [
  "pywebview>=5.0",
  "pyinstaller>=6.0",
]

[project.scripts]
splitter = "splitter.cli:app"
splitter-desktop = "splitter.desktop.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
splitter = ["desktop/ui/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests that run model inference (deselect with '-m \"not slow\"')",
]
