[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "splitter"
version = "0.1.13"
description = "CLI and desktop app for splitting audio into vocals, drums, bass, and other stems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "demucs @ git+https://github.com/adefossez/demucs@b9ab48cad45976ba42b2ff17b229c071f0df9390",
  "typer>=0.12",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
youtube = [
  "yt-dlp",
]
desktop = [
  "pywebview>=5.0",
  "pyinstaller>=6.0",
  "yt-dlp",
]

[project.scripts]
splitter = "splitter.cli:app"
splitter-desktop = "splitter.desktop.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
splitter = ["desktop/ui/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests that run model inference (deselect with '-m \"not slow\"')",
]
